--- a/CPC/README
+++ b/CPC/README
@@ -8,7 +8,7 @@ pasmo --equ WINAPE=0 example_borde.asm prueba.bin
 
 to compile it with SJASMPLUS exec
 sjasmplus --nologo --syntax=m -DWINAPE=0 example_borde.asm --raw=prueba.bin
-or just make.bat (you muist have sjasmplus & retrovirtualmachine on your path)
+or make.bat (you must have sjasmplus & retrovirtualmachine on your path)
 
 to compile it with WINAPE
 open the file make.asm on winape's aseembler and press F9
